--- a/FinalGradePrediction.ipynb
+++ b/FinalGradePrediction.ipynb
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Highest correlations (grouped together with similar values when applicable:\n",
+    "### Highest correlations (grouped together with similar values when applicable):\n",
     "\n",
     "    1. Number of failures\n",
     "    2. Mother/Father education\n",
