--- a/FinalGradePrediction.ipynb
+++ b/FinalGradePrediction.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, we will be using the [\"Student Performance Data Set\"](https://archive.ics.uci.edu/ml/datasets/Student+Performance) from the [University of California, Irvine (UCI) Center for Machine Learning and Intelligent Systems](https://cml.ics.uci.edu/) to predict the final grade of a student, using exploratory data analysis, in additional to comparing multiple linear models to see which is best fit."
+    "In this project, we will be using the [\"Student Performance Data Set\"](https://archive.ics.uci.edu/ml/datasets/Student+Performance) from the [University of California, Irvine (UCI) Center for Machine Learning and Intelligent Systems](https://cml.ics.uci.edu/) to predict the final grade of a student, using exploratory data analysis, in additional to comparing multiple models to see which is best fit."
    ]
   },
   {
@@ -576,13 +576,6 @@
     "plt.ylabel(\"Final Grade\", fontsize=15)\n",
     "plt.xlabel(\"Count\", fontsize=15)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1381,7 +1374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will compare different linear models to see which is the best performing for the prediction of Final Grade (G3)"
+    "Here we will compare a selection of different models to see which is the best performing for the prediction of Final Grade (G3)"
    ]
   },
   {
